Fix: remove tiny gap at the bottom

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,13 @@
 body {
     display: flex;
     margin: 0;
+    overflow: hidden;
 }
 
 img {
-    width: 550px;
+    height: 100%;
+}
+
+.background {
+    height: 100vh;
 }
